# services_hub

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/weather_api/: Dockerfile  README.md  fix_fastapi_annotations.py  openapi.yaml  setup.cfg
api/weather_api/.openapi-generator/: FILES
api/weather_api/src/openapi_server/: main.py
api/weather_api/src/openapi_server/apis/: default_api.py  default_api_base.py
api/weather_api/src/openapi_server/models/: air_temperature_get200_response.py  air_temperature_get200_response_data.py  air_temperature_get200_response_data_readings_inner.py  air_temperature_get200_response_data_readings_inner_data_inner.py  air_temperature_get200_response_data_stations_inner.py  air_temperature_get200_response_data_stations_inner_label_location.py  four_day_outlook_get200_response.py  four_day_outlook_get200_response_data.py  four_day_outlook_get200_response_data_records_inner.py  four_day_outlook_get200_response_data_records_inner_forecasts_inner.py  four_day_outlook_get200_response_data_records_inner_forecasts_inner_forecast.py  four_day_outlook_get200_response_data_records_inner_forecasts_inner_relative_humidity.py  four_day_outlook_get200_response_data_records_inner_forecasts_inner_temperature.py  four_day_outlook_get200_response_data_records_inner_forecasts_inner_wind.py  four_day_outlook_get200_response_data_records_inner_forecasts_inner_wind_speed.py  twenty_four_hr_forecast_get200_response.py  twenty_four_hr_forecast_get200_response_data.py  two_hr_forecast_get200_response.py  (+31 more)
api/weather_api/tests/: test_default_api.py
(+12 files in other folders)
