[metadata]
name = openapi_server
version = 2025.05.17
description = This is a merged OpenAPI specification containing multiple API services
long_description = file: README.md
keywords = OpenAPI Merged API Services
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
